[lightning] Add quickstart guide

--- a/lightning/01.lighting in 15min.ipynb
+++ b/lightning/01.lighting in 15min.ipynb
@@ -5,12 +5,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Effective pandas"
+    "## lightning in 15min\n",
+    "- https://lightning.ai/docs/pytorch/stable/starter/introduction.html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,268 +32,218 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Defining a LightingModule"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import torch\n",
+    "from torch import optim, nn, utils, Tensor\n",
+    "from torchvision.datasets import MNIST\n",
+    "from torchvision.transforms import ToTensor\n",
+    "import lightning.pytorch as pl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.backends.mps.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='mps')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "device = torch.device(\"mps\")\n",
+    "device"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "라이트닝 모듈을 사용하면 nn.Module과 training_step 등을 함께 삽입할 수 있음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder = nn.Sequential(\n",
+    "    nn.Linear(28*28, 64),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(64, 3)\n",
+    ")\n",
+    "\n",
+    "decoder = nn.Sequential(\n",
+    "    nn.Linear(3, 64),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(64, 28*28)\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#url = 'https :// github.com/ mattharrison /datasets/raw/master/data/vehicles.csv.zip'\n",
-    "df = pd.read_csv(\"data/vehicles.csv\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    " Aggregations"
+    "from typing import Any\n",
+    "\n",
+    "\n",
+    "from lightning.pytorch.utilities.types import STEP_OUTPUT\n",
+    "\n",
+    "\n",
+    "class LitAutoEncoder(pl.LightningModule):\n",
+    "    def __init__(self, encoder, decoder):\n",
+    "        super().__init__()\n",
+    "        self.encoder = encoder\n",
+    "        self.decoder = decoder\n",
+    "        \n",
+    "    def training_step(self, batch, batch_idx):\n",
+    "        x, y = batch\n",
+    "        x = x.view(x.size(0), -1)\n",
+    "        z = self.encoder(x)\n",
+    "        x_hat = self.decoder(z)\n",
+    "        \n",
+    "        loss = nn.functional.mse_loss(x_hat, x)\n",
+    "        \n",
+    "        self.log(\"train_loss\", loss)\n",
+    "        return loss\n",
+    "    \n",
+    "    def configure_optimizers(self):\n",
+    "        optimizer = optim.Adam(self.parameters(), lr = 1e-3)\n",
+    "        return optimizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_mpg = df.city08\n",
-    "hiway_mpg = df.highway08"
+    "autoencoder = LitAutoEncoder(encoder, decoder)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "city_mpg.is_unique"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "city_mpg.is_monotonic_increasing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "17.0"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 50% 퀀타일 리턴\n",
-    "city_mpg.quantile()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "24.0"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "city_mpg.quantile(0.9)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.1    13.0\n",
-       "0.5    17.0\n",
-       "0.9    24.0\n",
-       "Name: city08, dtype: float64"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "city_mpg.quantile([0.1, 0.5, 0.9])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10272"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# greater than\n",
-    "city_mpg.gt(20).sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "24.965973167412017"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "city_mpg.gt(20).mul(100).mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "18.369045304297103"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "city_mpg.agg('mean')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "mean     18.369045\n",
-       "var      62.503036\n",
-       "max     150.000000\n",
-       "Name: city08, dtype: float64"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "city_mpg.agg(['mean', np.var, max,])"
-   ]
-  },
-  {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ch8"
+    "### 3. Define a dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "329152"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "city_mpg.nbytes"
+    "dataset = MNIST(os.getcwd(), download=True, transform=ToTensor())\n",
+    "train_loader = utils.data.DataLoader(dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Train the model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: True (mps), used: True\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n",
+      "\n",
+      "  | Name    | Type       | Params\n",
+      "---------------------------------------\n",
+      "0 | encoder | Sequential | 50.4 K\n",
+      "1 | decoder | Sequential | 51.2 K\n",
+      "---------------------------------------\n",
+      "101 K     Trainable params\n",
+      "0         Non-trainable params\n",
+      "101 K     Total params\n",
+      "0.407     Total estimated model params size (MB)\n"
+     ]
+    },
+    {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bc72ebe7f7314a2c8fa8660faaaa386d",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "82288"
+       "Training: 0it [00:00, ?it/s]"
       ]
      },
-     "execution_count": 24,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`Trainer.fit` stopped: `max_epochs=1` reached.\n"
+     ]
     }
    ],
    "source": [
-    "city_mpg.astype('int16').nbytes"
+    "trainer = pl.Trainer(limit_train_batches=100, max_epochs=1)\n",
+    "trainer.fit(model = autoencoder, train_dataloaders=train_loader)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -318,7 +269,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
