[xgboost] effective xgboost ch20(complete)

--- a/feature_selection/Comprehensive guide on feature selection.ipynb
+++ b/feature_selection/Comprehensive guide on feature selection.ipynb
@@ -162,83 +162,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['mushrooms', 'house-price', 'CMaps', 'santander', 'house', 'vehicles.csv']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.listdir('data')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<generator object _walk at 0x16a883c80>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.walk('data')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tabular-playground-series',\n",
+       " '.DS_Store',\n",
+       " 'kaggle-survey-2018',\n",
+       " 'weatherAUS.csv',\n",
+       " 'bloodpressure.csv',\n",
+       " 'mushrooms',\n",
+       " 'house-price',\n",
+       " 'CMaps',\n",
+       " 'healthcare-dataset-stroke-data.csv',\n",
+       " 'santander',\n",
+       " 'house',\n",
+       " 'vehicles.csv',\n",
+       " 'sberbank']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir('../data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object _walk at 0x158743900>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.walk('../data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data/vehicles.csv\n",
-      "data/mushrooms/mushrooms.csv\n",
-      "data/house-price/test.csv\n",
-      "data/house-price/data_description.txt\n",
-      "data/house-price/train.csv\n",
-      "data/house-price/sample_submission.csv\n",
-      "data/CMaps/Damage Propagation Modeling.pdf\n",
-      "data/CMaps/train_FD001.txt\n",
-      "data/CMaps/train_FD003.txt\n",
-      "data/CMaps/RUL_FD004.txt\n",
-      "data/CMaps/train_FD002.txt\n",
-      "data/CMaps/RUL_FD001.txt\n",
-      "data/CMaps/x.txt\n",
-      "data/CMaps/RUL_FD003.txt\n",
-      "data/CMaps/RUL_FD002.txt\n",
-      "data/CMaps/train_FD004.txt\n",
-      "data/CMaps/test_FD003.txt\n",
-      "data/CMaps/test_FD002.txt\n",
-      "data/CMaps/test_FD001.txt\n",
-      "data/CMaps/test_FD004.txt\n",
-      "data/CMaps/readme.txt\n",
-      "data/santander/test.csv\n",
-      "data/santander/train.csv\n",
-      "data/santander/sample_submission.csv\n",
-      "data/house/train.csv\n"
+      "../data/.DS_Store\n",
+      "../data/weatherAUS.csv\n",
+      "../data/bloodpressure.csv\n",
+      "../data/healthcare-dataset-stroke-data.csv\n",
+      "../data/vehicles.csv\n",
+      "../data/tabular-playground-series/test.csv\n",
+      "../data/tabular-playground-series/train.csv\n",
+      "../data/tabular-playground-series/sample_submission.csv\n",
+      "../data/kaggle-survey-2018/raw.csv\n",
+      "../data/mushrooms/mushrooms.csv\n",
+      "../data/house-price/test.csv\n",
+      "../data/house-price/data_description.txt\n",
+      "../data/house-price/train.csv\n",
+      "../data/house-price/sample_submission.csv\n",
+      "../data/CMaps/Damage Propagation Modeling.pdf\n",
+      "../data/CMaps/train_FD001.txt\n",
+      "../data/CMaps/train_FD003.txt\n",
+      "../data/CMaps/RUL_FD004.txt\n",
+      "../data/CMaps/train_FD002.txt\n",
+      "../data/CMaps/RUL_FD001.txt\n",
+      "../data/CMaps/x.txt\n",
+      "../data/CMaps/RUL_FD003.txt\n",
+      "../data/CMaps/RUL_FD002.txt\n",
+      "../data/CMaps/train_FD004.txt\n",
+      "../data/CMaps/test_FD003.txt\n",
+      "../data/CMaps/test_FD002.txt\n",
+      "../data/CMaps/test_FD001.txt\n",
+      "../data/CMaps/test_FD004.txt\n",
+      "../data/CMaps/readme.txt\n",
+      "../data/santander/test.csv\n",
+      "../data/santander/train.csv\n",
+      "../data/santander/sample_submission.csv\n",
+      "../data/house/train.csv\n",
+      "../data/sberbank/train.csv\n"
      ]
     }
    ],
    "source": [
-    "for dirname, _, filenames in os.walk('data'):\n",
+    "for dirname, _, filenames in os.walk('../data'):\n",
     "    for filename in filenames:\n",
     "        print(os.path.join(dirname, filename))"
    ]
@@ -253,17 +274,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = pd.read_csv('data/santander/train.csv', nrows = 35000)\n",
-    "X_test = pd.read_csv('data/santander/test.csv', nrows=15000)"
+    "X_train = pd.read_csv('../data/santander/train.csv', nrows = 35000)\n",
+    "X_test = pd.read_csv('../data/santander/test.csv', nrows=15000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +503,7 @@
        "[5 rows x 371 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +532,7 @@
        "((35000, 370), (15000, 370))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +562,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.base import BaseEstimator, TransformerMixin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +583,7 @@
        "VarianceThreshold(threshold=0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,6 +593,26 @@
     "\n",
     "sel = VarianceThreshold(threshold=0)\n",
     "sel.fit(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isinstance(VarianceThreshold(), TransformerMixin)"
    ]
   },
   {
