--- a/lightning/01.lighting in 15min copy.ipynb
+++ b/lightning/01.lighting in 15min copy.ipynb
@@ -26,7 +26,7 @@
     "import seaborn as sns\n",
     "from scipy import stats\n",
     "import warnings; warnings.filterwarnings('ignore')\n",
-    "#plt.style.use('ggplot')\n",
+    "#plt.style.use('ggplot') \n",
     "plt.style.use('seaborn-whitegrid')\n",
     "%matplotlib inline"
    ]
@@ -180,6 +180,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset MNIST\n",
+       "    Number of datapoints: 60000\n",
+       "    Root location: /Users/sguys99/Desktop/project/self-study/lightning\n",
+       "    Split: Train\n",
+       "    StandardTransform\n",
+       "Transform: ToTensor()"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([60000, 28, 28])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.data.size()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -188,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +243,13 @@
       "GPU available: True (mps), used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
+      "HPU available: False, using: 0 HPUs\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "\n",
       "  | Name    | Type       | Params\n",
       "---------------------------------------\n",
@@ -214,7 +265,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc72ebe7f7314a2c8fa8660faaaa386d",
+       "model_id": "cd29ffb2dbb44ee292b76a30a91a05b9",
        "version_major": 2,
        "version_minor": 0
       },
