[lightning] Modify basic01

--- a/lightning/basic01.ipynb
+++ b/lightning/basic01.ipynb
@@ -127,7 +127,7 @@
    "source": [
     "dataset = MNIST(os.getcwd(), download=True,\n",
     "                transform=transforms.ToTensor())\n",
-    "train_loader = DataLoader(dataset)"
+    "train_loader = DataLoader(dataset, batch_size=64)"
    ]
   },
   {
@@ -140,6 +140,27 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='mps')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "device = torch.device(\"mps\")\n",
+    "device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +186,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8e7d1b65a514ea7beec88cde49d53e5",
+       "model_id": "8575ed7099324c2ea9c2d935ee6615c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -180,7 +201,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "`Trainer.fit` stopped: `max_epochs=1` reached.\n"
+      "`Trainer.fit` stopped: `max_epochs=10` reached.\n"
      ]
     }
    ],
@@ -189,7 +210,7 @@
     "autoencoder = LitAutoEncoder(Encoder(), Decoder())\n",
     "\n",
     "# train model\n",
-    "trainer = pl.Trainer(max_epochs=1)\n",
+    "trainer = pl.Trainer(max_epochs=10)\n",
     "trainer.fit(model=autoencoder, train_dataloaders=train_loader)"
    ]
   },
@@ -209,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
