[inter python] sec1(complete)

--- a/intermediate python/sec1/sec1.ipynb
+++ b/intermediate python/sec1/sec1.ipynb
@@ -2069,11 +2069,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 016. 프로파일링을 통한 코드 최적화 팁"
+   ]
   },
   {
    "cell_type": "code",
